--- a/Conceitos-Programacao/portugol/editor.cfg
+++ b/Conceitos-Programacao/portugol/editor.cfg
@@ -1,13 +1,13 @@
 #sem comentarios
-#Sun Mar 09 14:08:21 WET 2025
+#Mon Mar 10 12:28:22 GMT 2025
 fontName=Courier New
 backColorG=255
 fontBold=false
 backColorB=255
 sintax=true
 fontItalic=false
-file3=/Users/joaogoncalves/Documents/Interesse-Permanente/Formacao/FLAG/FLAG-FULLSTACK-NOV-22/_aulas/1- Intro-programacao/1-decisao/decisao-2.alg
-file2=/Users/joaogoncalves/Documents/Interesse-Permanente/Formacao/FLAG/FLAG-FULLSTACK-NOV-22/_aulas/1- Intro-programacao/1-decisao/decisao-1.alg
-file1=fluxogramas.tmp
+file3=fluxogramas.tmp
+file2=Sem Nome.alg
+file1=F\:\\\# Cursos\\2024_FLAG Full Stack\\11_Javascript\\flag-2025-JS-main\\Conceitos-Programacao\\portugol\\Exemplo_01-decisao.alg
 backColorR=255
 fontSize=20
