Fudnamentos de Programação, sessão 3

--- a/Conceitos-Programacao/portugol/editor.cfg
+++ b/Conceitos-Programacao/portugol/editor.cfg
@@ -1,13 +1,13 @@
 #sem comentarios
-#Wed Mar 12 12:28:12 GMT 2025
+#Fri Mar 14 12:02:04 GMT 2025
 fontName=Courier New
 backColorG=255
 fontBold=false
 backColorB=255
 sintax=true
 fontItalic=false
-file3=F\:\\\# Cursos\\2024_FLAG Full Stack\\11_Javascript\\flag-2025-JS-main\\Conceitos-Programacao\\portugol\\Estudo de Caso 2-4.alg
-file2=F\:\\\# Cursos\\2024_FLAG Full Stack\\11_Javascript\\flag-2025-JS-main\\Conceitos-Programacao\\portugol\\Estudo de Caso 2-6.alg
-file1=Sem Nome.alg
+file3=F\:\\\# Cursos\\2024_FLAG Full Stack\\11_Javascript\\flag-2025-JS-main\\Conceitos-Programacao\\_exercicios\\Repeticoes 30.alg
+file2=Sem Nome.alg
+file1=F\:\\\# Cursos\\2024_FLAG Full Stack\\11_Javascript\\flag-2025-JS-main\\Conceitos-Programacao\\_exercicios\\Repeticoes 31.alg
 backColorR=255
 fontSize=20
